# ACCache

./: .gitignore  GroupDivision.py  InformationCollection.py  README.md
GroupDivision/: agg.py  agg_groups.py  clean.py  convert.py  divided_graph.py  initial.sh  merge_discrete_file.py
Preproccess/: FreqExtraction.py  preprocess.py  split_in_days.py  stats.py  thread_split.py
plot/Exp01-SelectedClusters/: data_iops.csv  data_l95.csv  iops.py  meta.csv  tail.py
plot/Exp02-LoadBalance/: data.csv  load-balance.py  storage-balance.py  storagebalance.csv  store-balance-sub.py
plot/Exp03-MemCostTimeConsuming/: data_mem.csv  data_time.csv  mem-sub-2.py  mem-sub.py  mem.py  time.py
plot/Exp04-NodeNum/: data_n15.csv  iops.py  tail.py
plot/Exp05-NetworkSpeed/: data_new.csv  iops - 1G.py  iops - 5G.py  iops.py  tail.py
plot/Exp06-WindowSize/: data.csv  data_iops.csv  data_l95.csv  data_l99.csv  iops.py  tail.py
plot/Exp07-CorrelationThreshold/: MarkerDefine.py  data.csv  data_iops.csv  data_l95.csv  iops.py  tail.py
src/: .gitignore  CMSketch.cpp  CMSketch.h  CMakeLists.txt  FreqList.cpp  FreqList.h  FreqTable.cpp  FreqTable.h  ListNode.cpp  ListNode.h  MemcachedClient.cpp  MemcachedClient.h  OurScheme.cpp  OurScheme.h  Random.cpp  Random.h  SPCache.cpp  SPCache.h  buffer.h  config.h  config.json  correlation.ori  eccache.cpp  eccache.h  main.cpp  main.ori  main_correlation.cpp  parameter.h  replicas.cpp  replicas.h  stats.py  toolbox.h  twitter_trace.h
src/ErasureCode/: ErasureCode.cpp  ErasureCode.h
